# fepsuite

./: .gitignore  controller.zsh  mbar_analysis.py  pyproject.toml
abfe/utils/initial-grest/: pipeline.zsh
feprest/: bar1.sh  bar_deltae.py  clean_fepsuite_results.py  mbar_analysis.py  pipeline.zsh
feprest/fepgen/: angle_dihedral.hpp  pdb.hpp
feprest/rundir_template/: run.zsh
feprest/tools/: combine_ligand.py  ligand_param.py  make_mutated_pdb.py  make_mutated_pdb_old.py  prep_mutation_fep.py  selectres.py
rbfe/: analyze_network.py  pipeline.zsh
rbfe/rundir_template/: para_conf.zsh  run.zsh
rbfe/tools/: atom_mapping.py  merge_ligand_top.py  perturbation_network.py  prep_ligand_fep.py
scripts/: generate_mutation_fepsuite.py
submit_scripts/: none.zsh
